# strava-backer-upper

./: Cargo.toml  README.md  diesel.toml  docker-compose.yaml
migrations/2025-09-09-092855_create_athlete/: down.sql  up.sql
migrations/2026-02-28-165842_atheltes/: down.sql  up.sql
migrations/2026-02-28-190040_token/: down.sql  up.sql
migrations/2026-03-01-122209_token/: down.sql  up.sql
src/: db_connection.rs  ingester.rs  main.rs  schema.rs  settings.rs  strava_client.rs  strava_endpoints.rs
src/models/: athlete.rs  mod.rs
src/strava/: client.rs  mod.rs  parsers.rs  strava_client.rs
tests/: api_test.rs
