[package]
name = "strava-backup"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
tempdir = "0.3.7"
tempfile = "3.21.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.41", features = ["serde"] }
url = "2.5.7"
reqwest = { version = "0.12.23", features = ["json"]}
tokio = { version = "1.47.1", features = ["full"] }
